# news_checker

./: README.md  exceptions.py  main.py  pyproject.toml  run.py
alembic/versions/: 20260403214506_rate_limits.py
commands/: start.py
core/: client.py  config.py
database/entities/: user_check.py
database/services/: user_check.py
messages/: any.py
services/ai/: news_checker.py
