[project]
name = "news_checker"
version = "2.0.0"
description = "A News Checker Service for Telegram (as Bot) based on AI"
authors = [
    {name = "Alim",email = "zhaba.v.kedah77@gmail.com"}
]
requires-python = ">=3.13,<3.15"
dependencies = [
    "aiogram (>=3.26.0,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "colorlog (>=6.10.1,<7.0.0)",
    "groq (>=1.1.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false


[project.scripts]
start = "app"
